--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="icon-192.png">
   <meta name="theme-color" content="#111">
+  <title>non24clock</title>
   <style>
     body {
       font-family: sans-serif;
