--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </div>
   </div>
 
-  <audio id="alarmSound" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
+  <audio id="alarmSound" src="alarm.mp3" preload="auto"></audio>
 
   <script>
     if ('serviceWorker' in navigator) {
